- added javascript file to add elements to the to-do-list. -added delete button to the list. -changed the button to HTML5 standard. -removed span from HTML file. -removed media query and unwanted classes from CSS file.

--- a/index.css
+++ b/index.css
@@ -1,22 +1,14 @@
 body{
     font-family: 'Source Sans Pro', sans-serif;
 }
-@media(max width:800px){
-
-    body{
-        width:90%
-    }
-}
-
-
-.header{
+.main-container{
     border-radius: 11px;
     background-color: #f44336;
     padding: 30px 40px;
     color: white;
     text-align: center;
 }
-.my-to-do-list{
+.todo-list-heading{
     margin: 5px;
 }
 
@@ -35,27 +27,30 @@ body{
     padding: 0;
     text-align: center;
 }
-.task-list-item {
+
+.task-list-items{
   cursor: pointer;
   padding: 12px 8px 12px 40px;
   background: #eee;
   font-size: 18px;
   transition: 0.2s;
   border-radius: 11px;
+  justify-content: center;
 }
 
-.task-list-item:nth-child(odd) {
+.task-list-items:nth-child(odd) {
   background: #f9f9f9;
 }
-.task-list-item:nth-child(odd):hover{
+.task-list-items:nth-child(odd):hover{
     background-color: #84817a;
     color: white;
 }
-.task-list-item:nth-child(even):hover
+.task-list-items:nth-child(even):hover
 {
     background-color: #84817a;
     color: white;
 }
+
 .add-item-button{
 
     background-color: #d1d8e0;
@@ -65,11 +60,24 @@ body{
     text-align: center;
     font-size: 16px;
     border-radius: 11px;
-  }
-  .fa{
-      float: right;
+    font-weight: bold;
   }
   .add-item-button:hover{
     background-color:#84817a;
     color: white;
   }
+  .delete-button{
+      background: #f44336;
+      float: right;
+      font-size: 16px;
+      justify-content: center;
+      border-radius:7px;
+      font-weight: bolder;
+      color: white;
+      border: none;
+
+    }
+    .delete-button:hover{
+        background: white;
+        color: #f44336;
+    }
